tweak to compile options and enum converstion to support g++ 4.4

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,7 @@ AUTOMAKE_OPTIONS=foreign
 
 ACLOCAL_AMFLAGS = -I build-aux/m4 ${ACLOCAL_FLAGS}
 
-AM_CXXFLAGS = $(DEPS_CFLAGS) $(BOOST_CPPFLAGS) -fPIC -Wall -Wextra -std=c++11 -I/opt/local/include
+AM_CXXFLAGS = $(DEPS_CFLAGS) $(BOOST_CPPFLAGS) -fPIC -Wall -Wextra -std=c++0x -I/opt/local/include
 AM_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_IOSTREAMS_LDFLAGS) $(BOOST_THREAD_LDFLAGS) -L/opt/local/lib
 
 LIBS = $(BOOST_SYSTEM_LIBS) $(BOOST_IOSTREAMS_LIBS) $(BOOST_THREAD_LIBS)
